--- a/pages/static/fall.css
+++ b/pages/static/fall.css
@@ -95,10 +95,13 @@ the centering places the image of the leaf in the middle of the div - not really
         top: -10%;
         transform: translateX(20px) rotate(0deg);
     }
+    50%{
+        transform:translateX(-70px) rotate(90deg);
+    }
     100% {
         opacity: 1;
         top: 110%;
-        transform: translateX(-20px) rotate(180deg);
+        transform: translateX(20px) rotate(180deg);
     }
 }
 
@@ -106,12 +109,12 @@ the centering places the image of the leaf in the middle of the div - not really
     0% {
         opacity: 0.7;
         top: -10%;
-        transform: translateX(30px) rotate(0deg);
+        transform: translateX(10px) rotate(0deg);
     }
     100% {
         opacity: 1;
         top: 110%;
-        transform: translateX(-30px) rotate(180deg);
+        transform: translateX(-50px) rotate(180deg);
     }
 }
 
@@ -121,10 +124,13 @@ the centering places the image of the leaf in the middle of the div - not really
         top: -10%;
         transform: translateX(40px) rotate(0deg);
     }
+    50%{
+        transform:translateX(-20px) rotate(90deg);
+    }
     100% {
         opacity: 1;
         top: 110%;
-        transform: translateX(-40px) rotate(180deg);
+        transform: translateX(40px) rotate(180deg);
     }
 }
 
