--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -32,6 +32,11 @@
       </div>
     </header>
 
+    <audio controls autoplay>
+          <source src="{% static 'audios/summer.mp3' %}" type="audio/mpeg">
+          Your browser does not support the audio element.
+        </audio>
+
       <div class="cloud">
         <!--these leaf divs are used to animate the leaves for fall-->
         <!--since they are not part of conainter, the blog posts aren't affected by the animations-->
