uploaded summer music and got it to play, now uploading other music and adding some js to get it to switch on every page.

--- a/pages/static/spring.css
+++ b/pages/static/spring.css
@@ -22,6 +22,7 @@ header {
     text-align: center;
     font-size: 30px;
     padding:20px;
+    z-index:3;
 }
 
 /*use the bird to stlye all birds from base.html*/
