--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -29,13 +29,12 @@
         <button onclick="toggleTheme('fall.css')">Fall</button>
         <button onclick="toggleTheme('winter.css')">Winter</button>
         <button onclick="toggleTheme('spring.css')">Spring</button>
-      </div>
-    </header>
-
-    <audio controls autoplay>
-          <source src="{% static 'audios/summer.mp3' %}" type="audio/mpeg">
+        <audio controls autoplay>
+          <source id="music" src="{% static 'audios/summer.mp3' %}" type="audio/mpeg">
           Your browser does not support the audio element.
         </audio>
+      </div>
+    </header>
 
       <div class="cloud">
         <!--these leaf divs are used to animate the leaves for fall-->
