--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -29,7 +29,7 @@
         <button onclick="toggleTheme('fall.css')">Fall</button>
         <button onclick="toggleTheme('winter.css')">Winter</button>
         <button onclick="toggleTheme('spring.css')">Spring</button>
-        <audio controls autoplay>
+        <audio id="audio" controls autoplay>
           <source id="music" src="{% static 'audios/summer.mp3' %}" type="audio/mpeg">
           Your browser does not support the audio element.
         </audio>
