--- a/pages/static/winter.css
+++ b/pages/static/winter.css
@@ -9,10 +9,12 @@ body {
 
 header {
     text-align: center;
-    font-size: 30px;
-    padding:20px;
+    font-size: 25px;
+    padding:10px;
 }
-
+header h4 {
+    margin-top: 10px;
+}
 
 .container1 {
     position: absolute;
