can't get the background to work. That's basically all I need to do then I'll be done with the coding portion, and then I'll have to deploy and do the readme. I just can't figure out this background tho.

--- a/pages/static/spring.css
+++ b/pages/static/spring.css
@@ -115,3 +115,11 @@ header h4 {
         transform: scaleY(0.7) 
     } 
 }
+
+
+.blog-content{
+    background-color: white;
+    padding:10px;
+    border:black 1px solid;
+    z-index:2;
+}
