--- a/pages/templates/detail.html
+++ b/pages/templates/detail.html
@@ -2,17 +2,16 @@
 <!--it displays the blog post, unique for each!-->
 {% extends 'base.html' %}
 
-<div class="blog-content">{% block content %}
-
-<h1><u>{{post.title}}</u></h1>
-<h3><em>{{post.date}}</em></h3>
+<section>{% block content %}
+<h1>{{post.title}}</h1>
+<h3>{{post.date}}</h3>
 {{post.content}}
 {% endblock %}
-</div>
+</section>
 
 
 {% block extra_styles %}
-    <style>
+<style>
         body{
             background-color:bisque;
         }
@@ -24,8 +23,12 @@
             font-style: italic;
             color: rgb(58, 142, 232);
         }
-        .blog-content{
-            background-color: white;
-        }
+        section {
+            background-color: white;  /* Ensures the background is always white */
+            padding: 20px;  /* Adds some padding inside the box */
+            border-radius: 8px; 
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+            margin: 20px auto; 
+    }
     </style>
 {% endblock %}
