--- a/pages/templates/detail.html
+++ b/pages/templates/detail.html
@@ -24,8 +24,8 @@
             color: rgb(58, 142, 232);
         }
         section {
-            background-color: white;  /* Ensures the background is always white */
-            padding: 20px;  /* Adds some padding inside the box */
+            background-color: white;
+            padding: 20px;  
             border-radius: 8px; 
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
             margin: 20px auto; 
