--- a/pages/static/spring.css
+++ b/pages/static/spring.css
@@ -121,5 +121,14 @@ header h4 {
     background-color: white;
     padding:10px;
     border:black 1px solid;
-    z-index:2;
+}
+
+h1 {
+    color: #003366;
+    text-decoration: underline;
+}
+
+h3{
+    font-style: italic;
+    color: rgb(58, 142, 232);
 }
