--- a/pages/static/style.css
+++ b/pages/static/style.css
@@ -17,3 +17,14 @@ header h4 {
     margin-top: 10px;
 }
 
+h1 {
+    color: #003366;
+    text-decoration: underline;
+}
+
+h3{
+    font-style: italic;
+    color: rgb(58, 142, 232);
+}
+
+
