--- a/pages/templates/detail.html
+++ b/pages/templates/detail.html
@@ -2,33 +2,11 @@
 <!--it displays the blog post, unique for each!-->
 {% extends 'base.html' %}
 
-<section>{% block content %}
-<h1>{{post.title}}</h1>
-<h3>{{post.date}}</h3>
-{{post.content}}
+{% block content %}
+<div class="blog-content">
+    <h1>{{post.title}}</h1>
+    <h3>{{post.date}}</h3>
+    {{post.content}}
+</div>
 {% endblock %}
-</section>
 
-
-{% block extra_styles %}
-<style>
-        body{
-            background-color:bisque;
-        }
-        h1 {
-            color: #003366;
-            text-decoration: underline;
-        }
-        h3{
-            font-style: italic;
-            color: rgb(58, 142, 232);
-        }
-        section {
-            background-color: white;
-            padding: 20px;  
-            border-radius: 8px; 
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-            margin: 20px auto; 
-    }
-    </style>
-{% endblock %}
