added the css to all the season files, isn't showing up so going to try clearing cache again

--- a/pages/static/fall.css
+++ b/pages/static/fall.css
@@ -160,3 +160,21 @@ the centering places the image of the leaf in the middle of the div - not really
     pointer-events: auto;
     z-index: 3; 
 }
+
+/*for the detail.html page*/
+.blog-content{
+    background-color: white;
+    padding:10px;
+    border:black 1px solid;
+    z-index:999;
+}
+
+h1 {
+    color: #003366;
+    text-decoration: underline;
+}
+
+h3{
+    font-style: italic;
+    color: rgb(58, 142, 232);
+}
