finished all the css. WE HAVE FINISHED THE BLOG!!! Now i just have to update the readme

--- a/pages/static/fall.css
+++ b/pages/static/fall.css
@@ -165,8 +165,9 @@ the centering places the image of the leaf in the middle of the div - not really
 .blog-content{
     background-color: white;
     padding:10px;
-    border:black 1px solid;
+    border:rgb(214, 208, 208) 1px solid;
     z-index:999;
+    border-radius:15px;
 }
 
 h1 {
