--- a/pages/templates/base.html
+++ b/pages/templates/base.html
@@ -21,10 +21,8 @@
     <hr>
   
     <header>
-      <!--<div class="sunray">
-        <br>
-      </div>-->
       <div>
+        <p style="font-size:15px; margin:5px;">Click on the buttons to change the theme!</p>
         <button onclick="toggleTheme('summer.css')">Summer</button>
         <button onclick="toggleTheme('fall.css')">Fall</button>
         <button onclick="toggleTheme('winter.css')">Winter</button>
